# zen

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  meson.build
docs/: algorithm_8hpp_source.html  alloc_8hpp.html  alloc_8hpp_source.html  annotated.html  assoc__list_8hpp_source.html  bump__ptr__pool_8hpp.html  bump__ptr__pool_8hpp_source.html  bytestring_8hpp_source.html  char_8hpp_source.html  classassoc__list-members.html  classassoc__list.html  classbasic__bytestring-members.html  classbasic__bytestring.html  classblock-members.html  classblock.html  classbuffered__stream-members.html  classbuffered__stream.html  classbump__ptr__pool-members.html  classbump__ptr__pool.html  classbytestring__view-members.html  classbytestring__view.html  classclone__ptr-members.html  classclone__ptr.html  classconst__hash__index__iterator-members.html  classconst__hash__index__iterator.html  classeither-members.html  classeither.html  classeither_3_01L_00_01void_01_4-members.html  classeither_3_01L_00_01void_01_4.html  classes.html  classgrowing__bump__ptr__pool-members.html  classgrowing__bump__ptr__pool.html  classhash__graph-members.html  classhash__graph.html  classhash__index-members.html  classhash__index.html  classhash__index__iterator-members.html  classhash__index__iterator.html  classiterator__range-members.html  classiterator__range.html  (+270 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  (+35 more)
examples/: bump_ptr_construct.cc  construct.cc  either_try.cc  make_iterator_range_equal_range.cc
include/zen/: algorithm.hpp  alloc.hpp  assoc_list.hpp  bump_ptr_pool.hpp  bytestring.hpp  char.hpp  clone_ptr.hpp  compat.hpp  concepts.hpp  config.hpp  either.hpp  error.hpp  formatting.hpp  graph.hpp  hana.hpp  hash_index.hpp  iterator_range.hpp  json.hpp  mapped_iterator.hpp  math.hpp  maybe.hpp  meta.hpp  po.hpp  pool.hpp  range.hpp  seq_map.hpp  stream.hpp  string.hpp  transformer.hpp  tuple_hash.hpp  unicode.hpp  value.hpp  zip_iterator.hpp
src/: fs_io.cc  json.cc  po.cc
test/: bytestring.cc  either.cc  fs_io.cc  graph.cc  iterator_range.cc  mapped_iterator.cc  po.cc  pool.cc  range.cc  zip_iterator.cc
